tests/lime/fail/tokens/label_rest/byte_59.wsa
jmp .l; .l;: push 59
